cleared the sheet!

--- a/scrap_paper.Rmd
+++ b/scrap_paper.Rmd
@@ -1,643 +1,28 @@
  mutate(site = ifelse(str_detect(site, "INT"), "3", site)), 
  
- 
-    scale_y_continuous(
-    limits = c(0, 300),
-    breaks = seq(0, 300, by = 50),
+   ## to make font bigger and axes bigger
+   scale_x_continuous(
+      limits = c(0, 100),
+      breaks = seq(0, 100, by = 10),
+      expand = expansion(mult = c(0, 0.05))
+     ) +
+ scale_y_continuous(
+    limits = c(0, 100),
+    breaks = seq(0, 100, by = 10),
     expand = expansion(mult = c(0, 0.05))
   ) +
-  
-  
-  
-  UNKNOWN forb 1 and 2 at Site 2_4:
-  belt.spp_2019_load <- read.csv(here("data/Piru_Transect_Belt.xlsx", sheet == "belt_transects_raw")) %>% 
-  dplyr::select(ch1_site, ch1_transect, ch1_species) %>% 
-                             
-  
-  OMIT any variable that contains...                           
-seedbankgerm_plantcluster %>%  
-  filter(!str_detect(status, "Unknown"))
-  
-  OMIT exact specific variable...
-  seedbankgerm_plantcluster %>%  
-  filter(!status %in% "Unknown")
-  
-  
-# CANOPY HEIGHT
-```{r}
-# stand height 
-standheight_load <- read_csv("data/deg_maxheight.csv",
-                             col_types = cols(
-                               year = col_character(),
-                               site = col_character(),
-                               rep = col_character(),
-                               distance = col_double(),
-                               species = col_character(),
-                               height_cm = col_double()
-                               )) 
-
-standheight <- standheight_load %>% 
-  dplyr::select('site', 'rep', 'distance', 'species', 'height_cm') %>% 
-  # mutate(rep = case_when(rep == "1" ~ "01", # oldname ~ newname
-  #                        rep == "2" ~ "02",
-  #                        rep == "3" ~ "03",
-  #                        rep == "4" ~ "04",
-  #                        rep == "5" ~ "05",
-  #                        rep == "6" ~ "06",
-  #                        rep == "7" ~ "07",
-  #                        rep == "8" ~ "08",
-  #                        rep == "9" ~ "09",
-  #                             TRUE ~ rep)) %>% 
-  mutate(site_rep = paste(site, rep, sep = "_")) 
-
-# calculate means, sd, se, and mean percent cover values
-standheight_mean <- standheight %>% 
-  group_by(site_rep) %>%
-  summarize(avgheight_cm = mean(height_cm),
-            n = length((height_cm)),
-            sd = sd(height_cm),
-            se = ((sd(height_cm))/sqrt(length((height_cm)))), 
-            dist_from_mean = abs(avgheight_cm - height_cm),  # absolute distance from the mean, NOT needed to calcuate transect COV
-            cov_bytransect = sd/avgheight_cm # COV = SD / mean
-            ) 
-  
-# max(standheight_mean$avgheight_cm)
-# min = 46.2 cm
-# max = 280.3 cm
-
-cover_prep <- cover_bylfstatus_wide %>% 
-  dplyr::select(site, site_rep, forb_nonnative, grass_nonnative, shrub_native, forb_native, grass_native) %>% 
-  mutate(site_rep = case_when(site_rep == "INT5_5" ~ "INT5_1", 
-                              TRUE ~ site_rep))
-height_cover <- groupsdash %>% 
-  left_join(standheight_mean, by = "site_rep") %>% 
-  left_join(cover_prep, by = "site_rep") %>% 
-  mutate(cluster = as.character(cluster))
-
-
-
-# Fit the linear model: canopy height x nn grass cover
-model.h <- lm(avgheight_cm ~ grass_nonnative, data = height_cover) # response variable ~ independent variable
-
-# Print the summary of the model
-model.h.summary <- summary(model.h)
-
-
-# Extract the intercept, slope, and R^2 values
-intercept <- round(coef(model.h)[1], 2)
-slope <- round(coef(model.h)[2], 2)
-r_squared <- round(model.h.summary$r.squared, 3)
-print(paste("Multiple R^2:", r_squared))
-# [1] "Multiple R^2: 0.365"
-# print slope and intercept
-cf <- round(coef(model.h), 3)
-cat("Intercept:", cf[1], "\n")
-cat("Slope:", cf[2], "\n")
-# > cat("Intercept:", cf[1], "\n")
-# Intercept: 164.522 
-# > cat("Slope:", cf[2], "\n")
-# Slope: -93.231 
-
-intercepth <- round(coef(model.h)[1], 2)
-slopeh <- round(coef(model.h)[2], 2)
-
-# Create the label for the equation and R^2
-eq_label_h <- paste0("y = ", slopeh, "x + ", intercepth, "\n", "R² = ", r_squared)
-
-# figure 
-# 
-# 
-# 
-# 
-# 
-fig_height <- ggplot(data = height_cover %>%  
-       mutate(site = ifelse(str_detect(site, "INT"), "3", site)), 
-       aes(x = grass_nonnative * 100, y = avgheight_cm)) +
-  geom_point(aes(color = site), size = 3, show.legend = TRUE) +
-  scale_color_manual(values = c("blue", "green", "maroon", "maroon", "maroon", "maroon", "maroon")) +
-  xlim(0, 100) +
-   scale_y_continuous(
-    limits = c(0, 300),
-    breaks = seq(0, 300, by = 50),
-    expand = expansion(mult = c(0, 0.05))
-  ) +
-
-  labs(
-    x = "Non-native grass (%)",
-    y = "Average stand height (cm)",
-  #  title = "Mean stand height by Nonnative Grass percent cover",
-     color = "Legend") +
- 
-  
-  geom_smooth(aes(x = grass_nonnative * 100,
-                  y = avgheight_cm),
-              method = "lm", se = TRUE, linetype = "solid", show.legend = TRUE) +
-  theme_bw() #+ 
-   # annotate("text", x = 0, y = 15, label = eq_label_h, color = "black", size = 4, hjust = 0) 
-
-# (linear regression: y = -93.23x + 164.52; R² = 0.365) 
-
-fig_height
-```
-
-### COV
-```{r}
-transect_cov <- standheight_mean %>% 
-  dplyr::select(!dist_from_mean) %>% 
-  distinct(site_rep, .keep_all = TRUE) %>% 
-  left_join(cover_prep, by = "site_rep")
-  
-names(transect_cov)
-# [1] "site_rep"        "avgheight_cm"    "n"               "sd"              "se"              "cov_bytransect"  "site"            "forb_nonnative" 
-#  [9] "grass_nonnative" "shrub_native"    "forb_native"     "grass_native
-
-
-############################ regression line
-
-# Fit the quadratic model
-model.cov <- lm(avgheight_cm ~ grass_nonnative + grass_nonnative_sq, 
-                data = height_cover %>% 
-                  mutate(grass_nonnative_sq = grass_nonnative^2)) # response variable ~ independent variable
-
-# save the summary of the model to pull values 
-model.cov.summary <- summary(model.cov)
-
-# Extract the intercept, slope, and R^2 values
-intercept <- round(coef(model.cov)[1], 2)
-slope <- round(coef(model.cov)[3], 2)
-r_squared <- round(model.cov.summary$adj.r.squared, 3) # adj.r.squared? or r.squared value
-
-print(paste("Adjusted R^2:", r_squared))
-cf <- round(coef(model.cov), 3)
-cat("Intercept:", cf[1], "\n")
-cat("Slope:", cf[3], "\n")
-
-# Create the label for the equation and R^2
-eq_label_cov <- paste0("y = ", slope, "x + ", intercept, "\n", "R² = ", r_squared)
-
-
-############################# figure
-fig_cov <- ggplot(transect_cov %>% 
-         mutate(site = ifelse(str_detect(site, "INT"), "3", site)), 
-       aes(x = grass_nonnative * 100, y = cov_bytransect)) +
-
-   geom_point(aes(color = site), size = 3, show.legend = TRUE) +
-  scale_color_manual(values = c("blue", "green", "maroon", "maroon", "maroon", "maroon", "maroon")) +  
-  # geom_point(aes(fill = site), colour = "black", size = 3, pch = 21) +
- # theme(axis.text.x.bottom = element_text(angle = 90)) +
-
-    scale_y_continuous(
-    limits = c(0, 1),
-    breaks = seq(0, 1, by = 0.2),
-    expand = expansion(mult = c(0, 0.05))
-  ) +
-  
-  labs(x = "Non-native grass (%)", 
-       y = "COV of transect (SD/mean height)"#, 
-       # title = "Distance from mean canopy height (cm) by average non-native cover (%)"
-       ) +
-  stat_smooth(method = "lm", formula = y ~ poly(x, 2), se = TRUE, color = "black", linewidth = 1) +
-   annotate("text", x = 10, y = 0.1, label = eq_label_cov, color = "black", size = 4, hjust = 0) 
-
-fig_cov
-
-
-
-```
-
-# shrub density
-
-```{r}
-
-###################### shrub density - native
-
-
-######## 2019 
-# Site 1: 1-6
-# Site 2: 1-6
-# INT: 1-3
-shrubdensitylife_load <- read_csv("deg_beltdensity_bylifestage.csv", 
-    col_types = cols(
-       site = col_character(),
-      transect = col_character(), 
-      species = col_character(), 
-      dead = col_integer(),
-      immature = col_integer(),
-      mature = col_integer(), 
-      resprout = col_integer(), 
-      seedling = col_integer()
-      )
-     ) %>% 
-  mutate(transect = ifelse(site == "INT2", "1", transect), 
-         transect = ifelse(site == "INT3", "1", transect)
-         )%>% 
-  dplyr::select(-StandType, -hillslope) %>% 
-  as_tibble() %>% 
-  rename("rep" = "transect") %>% 
-   mutate(site_rep = paste(site, rep, sep = "_")) # create new column for site_rep
-
-shrubdensitylife_long <- shrubdensitylife_load %>% 
-  pivot_longer(cols = 4:8, names_to = "lifestage", values_to = "density_80m2") 
-# shrubdensitylife_long %>% group_by(site_rep) %>% summarize(total_shrub_N = sum(density_80m2))
-
-  
-shrubdensitylife <- shrubdensitylife_long %>% 
-  mutate(density_m2 = (density_80m2 / 80)) %>% 
-  dplyr::select(-site, -rep, -density_80m2) %>% 
-  mutate(lifestage = case_when(lifestage == "resprout" ~ "immature", 
-                               TRUE ~ lifestage)) %>% 
-   mutate(species = case_when(species == "Cenothus oliganthus" ~ "Ceanothus oliganthus", 
-                               TRUE ~ species))
-
-
-
-######## 2024   
-# Site 1: 7-14
-# Site 2: 7-21
-# INT: 5
-shrubdensity_2024_load <- read_csv("shrubdensity_2024.csv", 
-      col_types = cols(
-      site = col_character(),
-      transect = col_character(), 
-      species = col_character(), 
-      lifestage = col_character(),
-      density_80m2 = col_integer()
-      )
-      ) %>% 
-  dplyr::select(site, transect, species, lifestage, density_80m2) %>% 
-  rename("rep" = "transect") 
-# shrubdensity_2024_load %>% group_by(site, rep) %>% summarize(total_shrub_N = sum(density_80m2))
-# --> There are 4 transects without shrubs
-
-shrubdensity_2024 <- shrubdensity_2024_load %>% 
-    mutate(density_m2 = (density_80m2 / 80)) %>% 
-  mutate(site_rep = paste(site, rep, sep = "_")) %>% 
-   # na.omit() %>% 
-  dplyr::select(site_rep, species, lifestage, density_m2) %>% 
-   mutate(lifestage = case_when(lifestage == "resprout" ~ "immature", 
-                               TRUE ~ lifestage))
-
-######################## 
-
-# bind 2019 and 2024 shrub density 
-denspp  <- shrubdensitylife  %>% 
-  bind_rows(shrubdensity_2024)
-
-# length(unique(denspp$site_rep)) # 39, since no shrub den on INT4
-# sort(unique(denspp$site_rep))
-# 
-
-# left_join nngrass percent cover
-denspp_cover <- denspp %>% 
-  left_join(cover_bylfstatus_wide %>% 
-            mutate(site_rep = ifelse(str_detect(site_rep, "INT5"), "INT5_1", site_rep)), 
-            by = "site_rep") %>% 
-  dplyr::select(!c(forb_unknown2, forb_unknown1, fern_native)) %>% 
-  group_by(site_rep, lifestage) %>% 
-  summarise(total_density = sum(density_m2))
-
-########################  WITH shrub species WITH leaf type
-d
-
-
-%>% 
-  
-  left_join(shrub_leaftype, by = "species") %>%  # left join shrub_leaftype
-  
-  mutate(lifestage = factor(lifestage, levels = c("seedling", "immature", "mature", "dead"))) %>% 
-  separate(site_rep, into = c("site", "rep"), sep = "_") %>% 
-  
-  mutate(rep = case_when(rep == "1" ~ "01", # oldname ~ newname
-                         rep == "2" ~ "02",
-                         rep == "3" ~ "03",
-                         rep == "4" ~ "04",
-                         rep == "5" ~ "05",
-                         rep == "6" ~ "06",
-                         rep == "7" ~ "07",
-                         rep == "8" ~ "08",
-                         rep == "9" ~ "09",
-                              TRUE ~ rep)) %>% 
-   mutate(site_rep = paste(site, rep, sep = ".")) %>%
-   mutate(site_rep = case_when(site_rep == "INT1.01" ~ "INT1.1",
-                              site_rep == "INT2.01" ~ "INT2.1",
-                              site_rep == "INT3.01" ~ "INT3.1",
-                              site_rep == "INT4.01" ~ "INT4.1",
-                              site_rep == "INT5.01" ~ "INT5.1",
-                              TRUE ~ site_rep)) %>% 
-   left_join(groups %>%  dplyr::select(site_rep, cluster), by = "site_rep") 
-
-denspp_cover_stats <- denspp_cover %>% 
-  group_by(cluster, species, lifestage) %>% 
-  summarise(mean_density_m2 = mean(density_m2)) %>% 
-  pivot_wider(names_from = lifestage, values_from = mean_density_m2)
-# view(denspp_cover_stats)
-
-#################### bind shrub density WITHOUT shrub species
-density2019 <- shrubdensitylife_load %>% # group shrub density by lifestage
-  group_by(site_rep, lifestage) %>% 
-  summarise(sum_density_m2 = sum(density_m2)) # 75 rows
-density2024 <- shrubdensity_2024 %>%  
-  group_by(site_rep, lifestage) %>% 
-  summarise(sum_density_m2 = sum(density_m2)) # 104 rows
-density <- density2019 %>%  
-  bind_rows(density2024) # 179 rows
-density_cover <- height_cover %>%  # left join nn grass cover
-  dplyr::select(site, site_rep, grass_nonnative, shrub_native) %>% 
-  left_join(density, by = "site_rep") %>% 
-  filter(site_rep != "INT4_1") # omit INT4_1
-
-
-########## bind with cluster groups
-density_cover_cluster <- density_cover %>% 
-  separate(site_rep, into = c("site", "rep"), sep = "_") %>% 
-   mutate(rep = case_when(rep == "1" ~ "01", # oldname ~ newname
-                         rep == "2" ~ "02",
-                         rep == "3" ~ "03",
-                         rep == "4" ~ "04",
-                         rep == "5" ~ "05",
-                         rep == "6" ~ "06",
-                         rep == "7" ~ "07",
-                         rep == "8" ~ "08",
-                         rep == "9" ~ "09",
-                              TRUE ~ rep)) %>% 
-   mutate(site_rep = paste(site, rep, sep = ".")) %>%
-   mutate(site_rep = case_when(site_rep == "INT1.01" ~ "INT1.1",
-                              site_rep == "INT2.01" ~ "INT2.1",
-                              site_rep == "INT3.01" ~ "INT3.1",
-                              site_rep == "INT4.01" ~ "INT4.1",
-                              site_rep == "INT5.01" ~ "INT5.1",
-                              TRUE ~ site_rep)) %>% 
-   left_join(groups %>%  dplyr::select(site_rep, cluster), by = "site_rep") 
-
-
-
-
-```
-
-
-# make a figure for  ground cover types x nngrass cover 
-```{r}
-nngxnatshr <- ggplot(data = cover_bylfstatus_wide,
-       aes(x = grass_nonnative*100, 
-         y = shrub_native*100)) + 
-      geom_point(aes(color = site), size = 3) +
-   # scale_color_manual(values = c("blue", "green", "maroon", "maroon", "maroon", "maroon", "maroon")) +
-  geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval
-  labs(
-    #  title = "Linear regression of  total shrub cover by non-native grass cover",
-    x = "Non-native grass cover (%)",
-    y = "Total shrub cover (%)"#, 
-   #  color = "Site"
-    ) +
-  scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set x-axis limits and breaks
-  scale_y_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set y-axis limits and breaks
-  theme_bw() + 
-  annotate("text", x = 5, y = 5, label = eq_label, color = "black", size = 4, hjust = 0)
-nngxnatshr
-
-##################################################
-fig.1a <- ggplot(data = cover_byleaftype_wide) +
-  # Sclerophyllous Shrub Cover
-
-  
-  geom_point(data = cover_byleaftype_wide, # %>% filter(shrub_native_sclerophyllous > 0
-             aes(x = grass_nonnative_NA * 100, y = shrub_native_sclerophyllous * 100, 
-                 color = "sclerophyllous", shape = "sclerophyllous"), 
-             size = 3, show.legend = FALSE) +  # Adjust point size here
-  
-  
-  
-  geom_smooth(data = cover_byleaftype_wide , # %>% filter(shrub_native_sclerophyllous > 0) 
-              aes(x = grass_nonnative_NA * 100, y = shrub_native_sclerophyllous * 100, color = "sclerophyllous"), 
-              method = "lm", se = TRUE, linetype = "dotdash", show.legend = FALSE) +
-  
-  # Sage Scrub Cover
-  geom_point(data = cover_byleaftype_wide, 
-             aes(x = grass_nonnative_NA * 100, y = shrub_native_nonsclero * 100, 
-                 color = "sage scrub", shape = "sage scrub"), 
-             size = 3, show.legend = FALSE) +  # Adjust point size here
-  geom_smooth(data = cover_byleaftype_wide, 
-              aes(x = grass_nonnative_NA * 100, y = shrub_native_nonsclero * 100, color = "sage scrub"), 
-              method = "lm", se = TRUE, linetype = "dotted", show.legend = FALSE) +
-  # Labels
-  labs(
-    color = "Shrub Type",
-    shape = "Shrub Type",
-    x = "Non-native grass cover (%)",
-    y = "Shrub cover (%)"
-  ) +
-  # Custom Shapes and Colors for Legend
-  scale_shape_manual(values = c("sclerophyllous" = 7, "sage scrub" = 4)) +  # Square = 15, Circle = 16, 8 = *
-  scale_color_manual(values = c("sclerophyllous" = "black", "sage scrub" = "black")) +
-  # Axis Limits
-  xlim(0, 100) +
-  ylim(0, 100) +
   # Theme
   theme_bw() +
-  # Annotations for Equation Labels
-  annotate("text", x = 67, y = 90, label = eq_label_scl, color = "gray30", size = 4, hjust = 0) +
-  annotate("text", x = 67, y = 75, label = eq_label_ss, color = "grey30", size = 4, hjust = 0) +
-  geom_abline(intercept = 100, slope = -1, color = "darkgray", linetype = "dashed")
-
-
-
-```
-
-
-- germination (n/g soil) by family
-```{r germination (n/g soil) by family}
-
-seedbankgerm_cluster_prep <- germination_depthtreat %>% # left join seedbank cluster name to germ data
-  left_join(seed.subgrp.df, by = c("stand_core", "site")) %>% 
-  rename(sdbk_clust = sub_grp) %>% 
-  mutate(sdbk_clust = as.character(sdbk_clust)) %>% 
-  dplyr::select(species_diversity, status, lifescycle, lifeform, family, sdbk_clust, n_per_g, stand_core, treatment, depth_name, stand_core_depth_treat) %>% 
-  mutate(species_diversity = case_when(
-    species_diversity == "Erodium moschatum" ~ "Erodium spp.", 
-    species_diversity == "Erodium cicutarium" ~ "Erodium spp.", 
-        species_diversity == "Phacelia tanacetifolia" ~ "Phacelia spp.", 
-    species_diversity == "Phacelia viscida" ~ "Phacelia spp.", 
-    TRUE ~ species_diversity)
-  )
-
-seedbankgerm_cluster <- seedbankgerm_cluster_prep %>%  
-  group_by(species_diversity, status, lifescycle, lifeform, family, sdbk_clust, stand_core) %>% 
-  summarise(total_seeds = sum(n_per_g), 
-            n_trays = length(stand_core_depth_treat), 
-            avg_density = mean(total_seeds/8)) # average seed density across  potential trays
-
-
-hist(seedbankgerm_cluster$avg_density)
-
-median_seedgermcluster <- seedbankgerm_cluster %>% 
-   group_by(species_diversity, status, lifescycle, lifeform, family, sdbk_clust) %>% 
-  summarise(median_seedden = round(median(avg_density, na.rm = TRUE), 3), .groups = "drop") %>% 
-  mutate(sdbk_clust = recode(sdbk_clust, 
-                           `1` = "DEG", 
-                           `2` = "MTX", 
-                           `3` = "INT")) %>% 
-  pivot_wider(names_from = sdbk_clust, values_from = median_seedden, values_fill = 0) %>% 
+  theme(axis.text = element_text(size = 16)) + # axes numbers - font size
+  theme(axis.title = element_text(size = 20)) + # axes titles
+  theme(legend.title=element_text(size = 16)) + 
+  theme(legend.text=element_text(size = 16))
   
-  rename(Species = species_diversity, 
-          Lifecycle = lifescycle,
-         Status = status,
-         Lifeform = lifeform, 
-         Family = family
-         ) %>% 
-  
-  mutate(Status = case_when(
-    Status == "native" ~ "nat", 
-    Status == "nonnative" ~ "nn", 
-    TRUE ~ Status)
-  ) %>% 
-  mutate(Lifecycle = case_when(
-    Lifecycle == "annual" ~ "ann", 
-    Lifecycle == "perennial" ~ "per", 
-    TRUE ~ Lifecycle)
-    )  %>% 
-   relocate(Status, Lifecycle, Lifeform, Family, DEG, MTX, INT, .after = Species)  %>% 
-  mutate(
-    DEG = case_when(
-      DEG == 0 ~ "-",                            # Replace 0 with NA
-      DEG > 0 & DEG < 0.001 ~ "<0.001",                    # Replace values between 0 and 0.001
-      TRUE ~ as.character(DEG)                             # Keep all other values
-    ),
-    MTX = case_when(
-      MTX == 0 ~ "-",
-      MTX > 0 & MTX < 0.001 ~ "<0.001",
-      TRUE ~ as.character(MTX)
-    ),
-    INT = case_when(
-      INT == 0 ~ "-",
-      INT > 0 & INT < 0.001 ~ "<0.001",
-      TRUE ~ as.character(INT)
-    )
-  )
-  
-median_seedgermcluster
-  
-
-      
-
-# Print as a gt table
-table_germ <- median_seedgermcluster %>%
-  gt() %>%
-  tab_header(
-    title = "Median Average Germination by Cluster",
-    #subtitle = "Mean ± Standard Deviation for Elevation, Hillshade, Slope, Southwestness, Fire Events, and Coordinates"
-  ) %>%
-  cols_align(
-    align = "left", # Center alignment
-    columns = "Species" # Specify the "cluster" column
-  ) %>%
-  tab_options(
-    table.width = pct(80) # Make the table width 100%
-  ) 
-table_germ
-
-# Export the table as a word doc.
-gtsave(table_germ, 
-       "Ch1_Degradation_figures/table_germ_clustergroups_dec11.docx", # can also export as .png
-       expand = 10)
-
-```
-
-
-#
-- germination (n/g soil) by family
-```{r germination (n/g soil) by family}
-
-seedbankgerm_cluster_prep <- germination_depthtreat %>% # left join seedbank cluster name to germ data
-  left_join(seed.subgrp.df, by = c("stand_core", "site")) %>% 
-  rename(sdbk_clust = sub_grp) %>% 
-  mutate(sdbk_clust = as.character(sdbk_clust)) %>% 
-  dplyr::select(species_diversity, status, lifescycle, lifeform, family, sdbk_clust, n_per_g, stand_core, treatment, depth_name, stand_core_depth_treat) %>% 
-  mutate(species_diversity = case_when(
-    species_diversity == "Erodium moschatum" ~ "Erodium spp.", 
-    species_diversity == "Erodium cicutarium" ~ "Erodium spp.", 
-        species_diversity == "Phacelia tanacetifolia" ~ "Phacelia spp.", 
-    species_diversity == "Phacelia viscida" ~ "Phacelia spp.", 
-    TRUE ~ species_diversity)
-  )
-
-seedbankgerm_cluster <- seedbankgerm_cluster_prep %>%  
-  group_by(species_diversity, status, lifescycle, lifeform, family, sdbk_clust, stand_core) %>% 
-  summarise(total_seeds = sum(n_per_g), 
-            n_trays = length(stand_core_depth_treat), 
-            avg_density = mean(total_seeds/8)) # average seed density across  potential trays
-
-
-hist(seedbankgerm_cluster$avg_density)
-
-median_seedgermcluster <- seedbankgerm_cluster %>% 
-   group_by(species_diversity, status, lifescycle, lifeform, family, sdbk_clust) %>% 
-  summarise(median_seedden = round(median(avg_density, na.rm = TRUE), 3), .groups = "drop") %>% 
-  mutate(sdbk_clust = recode(sdbk_clust, 
-                           `1` = "DEG", 
-                           `2` = "MTX", 
-                           `3` = "INT")) %>% 
-  pivot_wider(names_from = sdbk_clust, values_from = median_seedden, values_fill = 0) %>% 
-  
-  rename(Species = species_diversity, 
-          Lifecycle = lifescycle,
-         Status = status,
-         Lifeform = lifeform, 
-         Family = family
-         ) %>% 
-  
-  mutate(Status = case_when(
-    Status == "native" ~ "nat", 
-    Status == "nonnative" ~ "nn", 
-    TRUE ~ Status)
-  ) %>% 
-  mutate(Lifecycle = case_when(
-    Lifecycle == "annual" ~ "ann", 
-    Lifecycle == "perennial" ~ "per", 
-    TRUE ~ Lifecycle)
-    )  %>% 
-   relocate(Status, Lifecycle, Lifeform, Family, DEG, MTX, INT, .after = Species)  %>% 
-  mutate(
-    DEG = case_when(
-      DEG == 0 ~ "-",                            # Replace 0 with NA
-      DEG > 0 & DEG < 0.001 ~ "<0.001",                    # Replace values between 0 and 0.001
-      TRUE ~ as.character(DEG)                             # Keep all other values
-    ),
-    MTX = case_when(
-      MTX == 0 ~ "-",
-      MTX > 0 & MTX < 0.001 ~ "<0.001",
-      TRUE ~ as.character(MTX)
-    ),
-    INT = case_when(
-      INT == 0 ~ "-",
-      INT > 0 & INT < 0.001 ~ "<0.001",
-      TRUE ~ as.character(INT)
-    )
-  )
-  
-median_seedgermcluster
-  
-
-      
-
-# Print as a gt table
-table_germ <- median_seedgermcluster %>%
-  gt() %>%
-  tab_header(
-    title = "Median Average Germination by Cluster",
-    #subtitle = "Mean ± Standard Deviation for Elevation, Hillshade, Slope, Southwestness, Fire Events, and Coordinates"
-  ) %>%
-  cols_align(
-    align = "left", # Center alignment
-    columns = "Species" # Specify the "cluster" column
-  ) %>%
-  tab_options(
-    table.width = pct(80) # Make the table width 100%
-  ) 
-table_germ
-
-# Export the table as a word doc.
-gtsave(table_germ, 
-       "Ch1_Degradation_figures/table_germ_clustergroups_dec11.docx", # can also export as .png
-       expand = 10)
-
-```
+      mutate(cluster = case_when(
+                            cluster == "1" ~ "NNG",
+                             cluster == "3" ~ "ssG",
+                             cluster == "2" ~ "ssF",
+                             cluster == "4" ~ "ssFG",
+                             cluster == "5" ~ "EVG",
+                             TRUE ~ cluster)) %>% 
+          mutate(cluster = factor(cluster, levels = c("EVG", "ssFG", "ssF", "ssG", "NNG"))),
