--- a/1.1_transect_continuous.Rmd
+++ b/1.1_transect_continuous.Rmd
@@ -839,7 +839,16 @@ cover_bylfstatus_wide <- cover_bylfstatus %>%
                              shrub_native = 0,
                              fern_native = 0,
                              unknown_unknown = 0)) %>% 
-  left_join(groupsdash, by = "site_rep")
+  left_join(groupsdash, by = "site_rep") %>% 
+  mutate(cluster = as.character(cluster)) %>% 
+   mutate(cluster = case_when(
+                            cluster == "1" ~ "NNG",
+                             cluster == "3" ~ "ssG",
+                             cluster == "2" ~ "ssF",
+                             cluster == "4" ~ "ssFG",
+                             cluster == "5" ~ "EVG",
+                             TRUE ~ cluster)) %>% 
+  mutate(cluster = factor(cluster, levels = c("NNG", "ssG", "ssF", "ssFG", "EVG")))
   
 # view(cover_bylfstatus_wide)
 
@@ -1396,7 +1405,7 @@ scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set x-
 
 ### x = nn grass
 
-- y = total shrub cover
+##### - y = total shrub cover
 ```{r}
 # quadratic regression equation:  y = ax² + bx + c
 
@@ -1928,15 +1937,19 @@ fig.1c <- ggplot(data = cover_bylfstatus_wide) + #%>%  filter(forb_native > 0.01
 
 fig.1c
 
+```
 
-#############################
+##### - y = native forb
+```{r}
+##########################################################
+
 # native forb cover x nn grass cover
 ggplot(data = cover_bylfstatus_wide,
        aes(x = grass_nonnative*100, 
          y = forb_native*100)) + 
   
-      geom_point(aes(color = site), size = 3) +
-   scale_color_manual(values = c("blue", "blue", "maroon", "maroon", "maroon", "maroon", "maroon")) +
+      geom_point(aes(color = cluster), size = 3) +
+   scale_color_manual(values = colors_plantclusters) +
   # geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval
    stat_smooth(method = "lm", formula = y ~ poly(x, 2), se = TRUE, color = "black", linewidth = 1) +  # polynomial fit
   labs(
@@ -1944,14 +1957,23 @@ ggplot(data = cover_bylfstatus_wide,
     y = "Native forb cover (%)",
     title = "Native forb cover by non-native grass cover"
     ) +
-  scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set x-axis limits and breaks
-  scale_y_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set y-axis limits and breaks
-  theme_bw()
+  scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)
+                     # , expand = expansion(mult = c(0, 0.05))
+                     ) + # Set x-axis limits and breaks
+  scale_y_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)
+                     # , expand = expansion(mult = c(0, 0.05))
+                     ) + # Set y-axis limits and breaks
+  theme_bw() + 
+    
+  theme(axis.text = element_text(size = 16)) + # axes numbers - font size
+  theme(axis.title = element_text(size = 20)) + # axes titles
+  theme(legend.title=element_text(size = 16)) + 
+  theme(legend.text=element_text(size = 16))
 
 
 ```
 
-- y = native grass
+##### - y = native grass
 ```{r regression grass x grass}
 
 # Fit the linear model
@@ -1999,10 +2021,10 @@ ggplot(data = cover_bylfstatus_wide,
        aes(x = grass_nonnative*100, 
          y = grass_native*100)) + 
   
-      geom_point(aes(color = site), size = 3) +
-   scale_color_manual(values = c("blue", "blue", "maroon", "maroon", "maroon", "maroon", "maroon")) +
-  geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval
-   # stat_smooth(method = "lm", formula = y ~ poly(x, 2), se = TRUE, color = "black", linewidth = 1) +  # polynomial fit - error bars go below 0%
+      geom_point(aes(color = cluster), size = 3) +
+   scale_color_manual(values = colors_plantclusters) +
+  # geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval
+   stat_smooth(method = "lm", formula = y ~ poly(x, 2), se = TRUE, color = "black", linewidth = 1) +  # polynomial fit - error bars go below 0%
   labs(
     x = "Non-native grass cover (%)",
     y = "Native grass cover (%)",
@@ -2010,7 +2032,13 @@ ggplot(data = cover_bylfstatus_wide,
     ) +
   scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set x-axis limits and breaks
   scale_y_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set y-axis limits and breaks 
-  theme_bw()
+  theme_bw() +
+      
+  theme(axis.text = element_text(size = 16)) + # axes numbers - font size
+  theme(axis.title = element_text(size = 20)) + # axes titles
+  theme(legend.title=element_text(size = 16)) + 
+  theme(legend.text=element_text(size = 16))
+
 
 ```
 
